[tmux] added time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -3,18 +3,25 @@ set -g mouse on
 set -g base-index 1
 set -g renumber-windows on
 
+#USEFUL COMMANDS ---------------------------------------------------------
+#<leader> + t to show time, alfnum or esc to go back to pane
+
 #STYLING ----------------------------------------------------------------
 # status bar
-set-option -gu status
-set-option -g status-position top
+set -gu status
+set -g status-interval 60
+set -g status-position top
 set -g status-style bg=default
-set-option -g status-right ""
-set-option -g status-justify centre
+set -g status-right "#[fg=#d3869b][%I:%M]"
+set -g status-left "#[fg=#ea6962][#S]"
+set -g status-justify centre
+set -g window-status-current-format "#[fg=#d8a657](#W)"
+
+## Rounded icons
 # set-option -g status-left "#[fg=green]#S"
-# set -g window-status-current-format "#[fg=yellow,bg=default]#[fg=white,bg=yellow] #W #[fg=yellow,bg=default]"
+# set -g window-status-current-format "#[fg=#d8a657,bg=default]#[fg=white,bg=#d8a657] #W #[fg=#d8a657,bg=default]"
 # set -g window-status-format "#[fg=cyan,bg=#333333]#[fg=red,bg=#333333]#W#[fg=cyan,bg=#333333] "
-set-option -g status-left "#[fg=magenta][#S]"
-set -g window-status-current-format "#[fg=yellow](#W)"
+#
 
 # Window borders
 set -g pane-border-style fg=#665c54
